<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="#000"
            />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_email"
            android:paddingStart="10dp"/>

        <EditText
            android:id="@+id/passwordField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:paddingStart="10dp"/>

        <EditText
            android:id="@+id/repeatPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/repeat_password"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/messageTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:gravity="center"
            android:padding="5dp"/>


        <Button
            android:id="@+id/signUpButton"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:text="Sign Up"
            android:textColor="#fff"
            android:background="#000"
            android:layout_height="40dp">

        </Button>

        <LinearLayout
            android:id="@+id/accountField2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:gravity="center"
                android:text="Already have an account?"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/logInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log In"
                android:layout_marginStart="3dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"
                />


        </LinearLayout>


    </LinearLayout>


</FrameLayout>