<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textColor="#000"
            />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/your_email"
            android:paddingStart="10dp"
            />

        <EditText
            android:hint="@string/your_password"
            android:paddingStart="10dp"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_gravity="end"
            android:text="@string/forgot_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:gravity="center"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/logInButton"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:text="Log In"
            android:textColor="#fff"
            android:background="#000"
            android:layout_height="40dp"/>

        <LinearLayout
            android:id="@+id/accountField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Need Account?"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="#000"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>